--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </section>
         <!--reasons-->
         <section class="reasons">
-            <div class="container"></div>
-                <h2 class="visually-hidden">Наши правила</h2>
+            <h2 class="visually-hidden">Наши правила</h2>
+            <div class="container">
                 <ul class="list reasons-list">
                     <li class="reasons-list-item">
                         <h3 class="reasons-item">Внимание к деталям</h3>
